--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <ul>
           <li><a href="#home">ホーム</a></li>
           <li><a href="#features">機能</a></li>
-          <li><a href="#screenshots">スクリーンショット</a></li>
           <li><a href="#privacy">プライバシーポリシー</a></li>
           <li><a href="#terms">利用規約</a></li>
-          <li><a href="https://docs.google.com/forms/d/1tWOUKVOE0ihkdqvqEFBDGiMVqL3FG8mAs0YKUmAJeHU/edit" target="_blank">お問い合わせ</a></li>
+          <li><a href="#contact">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
@@ -51,23 +50,6 @@
       <div class="feature-item">
         <h3>使用技術</h3>
         <p>OpenAIのAPIを利用したAI分析と、Google AdMobによる広告配信サービスを採用。</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- スクリーンショット＆キャラクター -->
-  <section id="screenshots" class="screenshots">
-    <div class="container">
-      <h2>スクリーンショット & キャラクター</h2>
-      <div class="images">
-        <div class="image-item">
-          <img src="app-screenshot.png" alt="アプリのスクリーンショット" width="600" height="400">
-          <p>アプリスクリーンショット (600×400)</p>
-        </div>
-        <div class="image-item">
-          <img src="character.png" alt="アプリキャラクター" width="300" height="300">
-          <p>キャラクター画像 (300×300)</p>
-        </div>
       </div>
     </div>
   </section>
@@ -128,6 +110,17 @@
       
       <p><strong>8. 準拠法および裁判管轄</strong><br>
       本利用規約は日本法に準拠し、利用に関する紛争は開発者所在地の管轄裁判所を専属的合意管轄とします。</p>
+    </div>
+  </section>
+
+  <!-- お問い合わせ -->
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>お問い合わせ</h2>
+      <p>ご質問やご意見がございましたら、下記のリンクよりお問い合わせください。</p>
+      <a href="https://docs.google.com/forms/d/1tWOUKVOE0ihkdqvqEFBDGiMVqL3FG8mAs0YKUmAJeHU/edit" target="_blank" class="contact-btn">
+        お問い合わせフォームへ
+      </a>
     </div>
   </section>
 
